  - Changing error provider associated controls so the layout is not messed up on Linux
- Manage Installations:
  - Remove was always enabled even it there was no installed version
- Fixing possible errors when closing forms while an async operation is still in progress.
* API changes:
  * Members are annotated for using C# 8.0 nullable references
  + ViewModelFactory class:
    + New CreateLanguageSettings method
    + New CreateEditResources method
    + New CreateDownloadResources method
  + IViewModel interface
    + New IsModified property
  * IViewModel<TModel> interface
    * The IsModified property is now inherited from IViewModel
  + IView interface:
    + New ShowDialog(IView) overload
  + ViewFactory class:
    + New ShowDialog(IViewModel, IView) overload
  + New LocalizableLibraries enum
  + New LocalizationInfo class

- KGySoft.Drawing.DebuggerVisualizers.dll
=========================================
- Fixing a possible IndexOutOfRangeException when debugging an animated GIF.
- Fixing possible incorrect initially displayed size info when debugging a multi-resolution icon or bitmap.
* Improved performance and reduced memory consumption when serializing and deserializing debugged objects.

* KGySoft.Drawing.DebuggerVisualizers.Package.dll
=================================================
* When ImagingTools is executed from Visual Studio Tools menu a new thread is created so the possible lagging of
  Visual Studio does not affect the performance of ImagingTools anymore.


~~~~~~~~~
+ v2.3.0:
~~~~~~~~~

+ KGySoft.Drawing.ImagingTools.exe
==================================
+ Key shortcuts for several commands
+ Improving the image viewer control performance for large images
+ Save/Load: Supporting saving/loading raw bitmap data, which preserves any pixel format
+ Color Settings:
  + Count Colors
+ New Edit Image drop down button
  + Rotate Left/Right
  + Resize Bitmap
  + Pixel Format/Quantizing/Dithering
  + Adjust Brightness/Contrast/Gamma